force-app/main/default/objects/Rent_Schedule__c/Rent_Schedule__c.object-meta.xml
<CustomObject>
    <label>Rent Schedule</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Rent Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rent Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>