force-app/main/default/objects/Rent_Schedule__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rent Schedules</relationshipLabel>
    <relationshipName>Rent_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>