force-app/main/default/objects/Rent_Schedule__c/fields/Data_Summary__c.field-meta.xml
<CustomField>
    <fullName>Data_Summary__c</fullName>
    <label>Data Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>